force-app/main/default/objects/maps__Waypoint__c/maps__Waypoint__c.object-meta.xml
<CustomObject>
    <label>Maps Waypoint</label>
    <nameField>
        <label>Waypoint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Waypoints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>