force-app/main/default/objects/maps__Waypoint__c/fields/maps__Account__c.field-meta.xml
<CustomField>
    <fullName>maps__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Maps Waypoints</relationshipLabel>
    <relationshipName>Maps_Waypoints</relationshipName>
    <type>Lookup</type>
</CustomField>