force-app/main/default/objects/maps__Waypoint__c/fields/maps__AdditionalData__c.field-meta.xml
<CustomField>
    <fullName>maps__AdditionalData__c</fullName>
    <label>Additional Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>