force-app/main/default/objects/maps__Waypoint__c/fields/maps__Address__c.field-meta.xml
<CustomField>
    <fullName>maps__Address__c</fullName>
    <label>Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>