force-app/main/default/objects/maps__Waypoint__c/fields/maps__BaseObject__c.field-meta.xml
<CustomField>
    <fullName>maps__BaseObject__c</fullName>
    <label>Base Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>