force-app/main/default/objects/maps__Waypoint__c/fields/maps__BaseObjectId__c.field-meta.xml
<CustomField>
    <fullName>maps__BaseObjectId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base Object Lookup</label>
    <referenceTo>maps__BaseObject__c</referenceTo>
    <relationshipLabel>Maps Waypoints</relationshipLabel>
    <relationshipName>Waypoints</relationshipName>
    <type>Lookup</type>
</CustomField>