force-app/main/default/objects/maps__Waypoint__c/fields/maps__Case__c.field-meta.xml
<CustomField>
    <fullName>maps__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Maps Waypoints</relationshipLabel>
    <relationshipName>Maps_Waypoints</relationshipName>
    <type>Lookup</type>
</CustomField>