force-app/main/default/objects/maps__Waypoint__c/fields/maps__Contact__c.field-meta.xml
<CustomField>
    <fullName>maps__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Maps Waypoints</relationshipLabel>
    <relationshipName>Maps_Waypoints</relationshipName>
    <type>Lookup</type>
</CustomField>