force-app/main/default/objects/maps__Waypoint__c/fields/maps__EventId__c.field-meta.xml
<CustomField>
    <fullName>maps__EventId__c</fullName>
    <label>EventId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>