force-app/main/default/objects/maps__Waypoint__c/fields/maps__HasAddress__c.field-meta.xml
<CustomField>
    <fullName>maps__HasAddress__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Has Address</label>
    <type>Checkbox</type>
</CustomField>