force-app/main/default/objects/maps__Waypoint__c/fields/maps__Lead__c.field-meta.xml
<CustomField>
    <fullName>maps__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Maps Waypoints</relationshipLabel>
    <relationshipName>Maps_Waypoints</relationshipName>
    <type>Lookup</type>
</CustomField>