force-app/main/default/objects/maps__Waypoint__c/fields/maps__LinkId__c.field-meta.xml
<CustomField>
    <fullName>maps__LinkId__c</fullName>
    <label>Link Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>