force-app/main/default/objects/maps__Waypoint__c/fields/maps__MarkerLayer__c.field-meta.xml
<CustomField>
    <fullName>maps__MarkerLayer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maps Marker Layer</label>
    <referenceTo>maps__MarkerLayer__c</referenceTo>
    <relationshipLabel>Waypoints</relationshipLabel>
    <relationshipName>Waypoints</relationshipName>
    <type>Lookup</type>
</CustomField>