force-app/main/default/objects/maps__Waypoint__c/fields/maps__Notes__c.field-meta.xml
<CustomField>
    <fullName>maps__Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>