force-app/main/default/objects/maps__Waypoint__c/fields/maps__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>maps__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Maps Waypoints</relationshipLabel>
    <relationshipName>Maps_Waypoints</relationshipName>
    <type>Lookup</type>
</CustomField>