force-app/main/default/objects/maps__Waypoint__c/fields/maps__Route__c.field-meta.xml
<CustomField>
    <fullName>maps__Route__c</fullName>
    <label>Route</label>
    <referenceTo>maps__Route__c</referenceTo>
    <relationshipLabel>Waypoints</relationshipLabel>
    <relationshipName>Waypoints</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>